<?xml version="1.0"?>
<package>
  <name>nav2_driver</name>
  <version>0.0.1</version>
  <description>ROS driver node for the Nav2 base</description>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <author email="paul@bovbel.com">Paul Bovbel</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
