<?xml version="1.0"?>
<package>
  <name>nav2_platform</name>
  <version>0.0.4</version>
  <description>ROS Metapackage containing all nodes, config, and launch files for Nav2 Robot Platform</description>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <author email="paul@bovbel.com">Paul Bovbel</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>nav2_bringup</run_depend>
  <run_depend>nav2_driver</run_depend>
  <run_depend>nav2_navigation</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
